--- a/index.html
+++ b/index.html
@@ -494,6 +494,9 @@
                             <h5 class="card-title text-center"><b>Portfolio Website | Frontend Project</b></h5>
                             <p class="card-text">This following project is the Portfolio which I made for one of my internships. It was developed with HTML, CSS and JavaScript.</p>
                         </div>
+                         <div class="d-flex flex-row justify-content-around align-items-center">
+                                <a href"https://sushmaperla.github.io/PortFolio/" target="_blank"><i
+                                        class="bi bi-github text-dark projectIcon"></i></a>
                     </div>
                 </div>
             </div>
